<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/treinos"
        android:title="@string/treinos"
        android:fontFamily="@font/cabin"
        android:textSize="12sp"
        android:icon="@drawable/treino_icon">
    </item>
    <item
        android:id="@+id/alimentacao"
        android:title="@string/alimentacao"
        android:fontFamily="@font/cabin"
        android:textSize="12sp"
        android:icon="@drawable/alimentacao_icon"/>
    <item
        android:id="@+id/perfil"
        android:title="@string/evolucao"
        android:fontFamily="@font/cabin"
        android:textSize="12sp"
        android:icon="@drawable/evolucao_icon"/>
    <item
        android:id="@+id/configuracoes"
        android:title="@string/configuracoes"
        android:fontFamily="@font/cabin"
        android:textSize="12sp"
        android:icon="@drawable/engine_icon"/>
</menu>